[package]
name = "calico"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
color_processing = "0.4"
[dependencies.palette]
version = "0.5"
features = ["named_from_str"]
